margin/whitespace between media image and leaflet map. Close workspace issue #9960

--- a/nave/lod/static/less/lod-detail.less
+++ b/nave/lod/static/less/lod-detail.less
@@ -151,6 +151,7 @@ span.predicate-uri-label {
 
 .media-viewer {
   background: @gray-light;
+  margin-bottom: 20px;
   min-height: 150px;
   text-align: center;
   width: 100%;
